# osmpbf2sqlite

./: .hgignore  2osm.sln  CMakeCache.txt  CMakeLists.txt  ProjectHome.md  ReadMe.txt  Using.md
Alien/zlib127/: README.txt
CMake/: PCHSupport.cmake  PCH_MSVC.cmake  PrecompiledHeader.cmake
OsmPbf2sqlite/: CMakeLists.txt  CTabNodeInfo_Cash.h  CTabNode_Cash.h  CTabRelation_Cash.h  CTabWay_Cash.h  CdbDictionary.cpp  CdbDictionary.h  ConsoleOutput.cpp  ConsoleOutput.h  CtabKeyValue.cpp  CtabKeyValue.h  DB.cpp  DB.h  OsmPbf2sqlite.cpp  OsmPbf2sqlite.rc  OsmPbf2sqlite.vcproj  SqLite3MemAloc.cpp  SqLite3MemAloc.h  TTable_cash.h  ThreadLoader.cpp  ThreadLoader.h  config.h  resource.h  stdafx.cpp  stdafx.h
OsmPbf2sqlite/DLIB/: MyString.cpp  MyString.h  SQLite3DB.cpp  SQLite3DB.h  SQLite3Table.cpp  SQLite3Table.h  Stopwatch.cpp  Stopwatch.h  TAllocatorAddOnly.h  TSlicedArray.h  ThreadManager.cpp  ThreadManager.h
OsmPbf2sqlite/OSMPBF/: BlobHeader.cpp  BlobHeader.h  ChangeSet.h  DenseNodes.h  Headerblock.cpp  Headerblock.h  Info.h  Node.h  PrimitiveBlock.h  PrimitiveGroup.h  Relation.h  StringTable.h  Way.h  osmpbf.h
OsmPbf2sqlite/PBFRO/: PbfFBytes.cpp  PbfFBytes.h  PbfField.cpp  PbfField.h  PbfInputStream.cpp  PbfInputStream.h  PbfMessage.cpp  PbfMessage.h  Pbfro.h  TFar.h  TFsint.h  TFuint.h  svector.h
